# foodinfo

./: README.md  manage.py  pyproject.toml
account/: admin.py  apps.py
account/tests/: test_views.py
culinary/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
culinary/fixtures/: culinary.json  users.json
culinary/management/commands/: load_sample.py
culinary/migrations/: 0001_initial.py  0002_ingredient_calories_ingredient_carbs_and_more.py  0002_recipe_tags.py  0003_fridge.py  0003_remove_recipe_ingredients.py  0004_utensilconversion_and_more.py  0005_utensilconversion_utensil and ingredient combination must be unique.py  0006_ingredientusage_recipe_ingredientusage_recipe.py
culinary/tests/: test_commands.py  test_models.py  test_serializers.py  test_views.py
culinary/views/: __init__.py  conversion_views.py  fridge_views.py  ingredient_views.py  measure_views.py  recipe_views.py
foodinfo/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
tags/: admin.py  models.py  serializers.py  urls.py  views.py
tags/fixtures/: tags.json
tags/management/commands/: load_tags.py
tags/migrations/: 0001_initial.py
tags/tests/: test_commands.py  test_models.py  test_serializers.py  test_views.py
test/: base_test.py  factories.py
