[tool.poetry]
name = "foodinfo"
version = "0.1.0"
description = ""
authors = ["Gvard Windlass <gvard.windlass@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.1"
djangorestframework = "^3.14.0"
dj-rest-auth = "^4.0.1"
django-allauth = "^0.54.0"
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
